--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/company_employee
+spring.datasource.username=root
+spring.datasource.password=root
+server.port=8081
 
+project.images.path=src/main/resources/static/images
