--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.username=root
 spring.datasource.password=root
 server.port=8081
 
-project.images.path=src/main/resources/static/images
+project.images.path=C:/Users/Admin/IdeaProjects/company-employee-spring-images
